# colorify

./: .gitignore  Cargo.toml  README.md
examples/: help.rs  typical.rs
src/: lib.rs
